--- a/frontend/trangchu.html
+++ b/frontend/trangchu.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./css/trangchu.css">
 </head>
+
 <body class="bg-light">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
@@ -35,29 +37,41 @@
                     <div class="position-relative me-3">
                         <a href="#" class="text-white position-relative" onclick="toggleCart(event)">
                             <i class="fas fa-shopping-cart fa-lg"></i>
-                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id="cart-count">
+                            <span
+                                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                                id="cart-count">
                                 0
                             </span>
                         </a>
                     </div>
-                    
+
                     <!-- User Menu -->
                     <div class="dropdown">
-                        <a href="#" class="text-white dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-user fa-lg me-1"></i>
+                        <a href="#" class="text-white dropdown-toggle d-flex align-items-center"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <img id="user-avatar" src="https://via.placeholder.com/30" alt="avatar"
+                                class="rounded-circle me-2" style="width:30px;height:30px;object-fit:cover;">
                             <span id="user-name">Tài khoản</span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <!-- Khi chưa đăng nhập -->
-                            <li class="not-logged-in"><a class="dropdown-item" href="#" onclick="showLogin(event)"><i class="fas fa-sign-in-alt me-2"></i>Đăng nhập</a></li>
-                            <li class="not-logged-in"><a class="dropdown-item" href="#" onclick="showRegister(event)"><i class="fas fa-user-plus me-2"></i>Đăng ký</a></li>
-                            
+                            <li class="not-logged-in"><a class="dropdown-item" href="#" onclick="showLogin(event)"><i
+                                        class="fas fa-sign-in-alt me-2"></i>Đăng nhập</a></li>
+                            <li class="not-logged-in"><a class="dropdown-item" href="#" onclick="showRegister(event)"><i
+                                        class="fas fa-user-plus me-2"></i>Đăng ký</a></li>
+
                             <!-- Khi đã đăng nhập -->
-                            <li class="logged-in d-none"><a class="dropdown-item" href="#"><i class="fas fa-user-circle me-2"></i>Tài khoản của tôi</a></li>
-                            <li class="logged-in d-none"><a class="dropdown-item" href="#"><i class="fas fa-box me-2"></i>Đơn hàng của tôi</a></li>
-                            <li class="logged-in d-none"><a class="dropdown-item" href="#"><i class="fas fa-heart me-2"></i>Yêu thích</a></li>
-                            <li class="logged-in d-none"><hr class="dropdown-divider"></li>
-                            <li class="logged-in d-none"><a class="dropdown-item text-danger" href="#" onclick="logout(event)"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
+                            <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
+                                        class="fas fa-user-circle me-2"></i>Tài khoản của tôi</a></li>
+                            <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
+                                        class="fas fa-box me-2"></i>Đơn hàng của tôi</a></li>
+                            <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
+                                        class="fas fa-heart me-2"></i>Yêu thích</a></li>
+                            <li class="logged-in d-none">
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li class="logged-in d-none"><a class="dropdown-item text-danger" href="#"
+                                    onclick="logout(event)"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
                         </ul>
                     </div>
                 </div>
@@ -145,7 +159,8 @@
             </div>
             <hr style="border-color: rgba(255,255,255,0.1); margin: 1.5rem 0;">
             <div class="text-center">
-                <p class="mb-0">&copy; 2024 TechStore. All rights reserved. Designed with <i class="fas fa-heart text-danger"></i></p>
+                <p class="mb-0">&copy; 2024 TechStore. All rights reserved. Designed with <i
+                        class="fas fa-heart text-danger"></i></p>
             </div>
         </div>
     </footer>
@@ -153,4 +168,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/trangchu.js"></script>
 </body>
+
 </html>
