--- a/frontend/trangchu.html
+++ b/frontend/trangchu.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./css/trangchu.css">
+    <link rel="stylesheet" href="./css/popupGioHang.css">
 </head>
 
 <body class="bg-light">
@@ -164,9 +165,22 @@
             </div>
         </div>
     </footer>
+    <!-- Overlay chọn số lượng -->
+    <div id="addToCartModal" class="modal-overlay d-none">
+    <div class="modal-content">
+        <h5>Chọn số lượng</h5>
+        <input type="number" id="quantityInput" min="1" value="1" class="form-control my-2">
+        <div class="d-flex justify-content-end gap-2">
+        <button class="btn btn-secondary" onclick="closeAddToCart()">Hủy</button>
+        <button class="btn btn-primary" onclick="confirmAddToCart()">Thêm vào giỏ</button>
+        </div>
+    </div>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/trangchu.js"></script>
+    <!-- <script src="./js/popupGioHang.js"></script> -->
 </body>
 
 </html>
