--- a/frontend/trangchu.html
+++ b/frontend/trangchu.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./css/trangchu.css">
-    <link rel="stylesheet" href="./css/popupGioHang.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body class="bg-light">
@@ -36,7 +36,7 @@
                 <div class="d-flex align-items-center">
                     <!-- Giỏ hàng -->
                     <div class="position-relative me-3">
-                        <a href="#" class="text-white position-relative" onclick="toggleCart(event)">
+                        <a href="./tranggiohang.html" class="text-white position-relative" onclick="toggleCart(event)">
                             <i class="fas fa-shopping-cart fa-lg"></i>
                             <span
                                 class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -57,22 +57,20 @@
                         <ul class="dropdown-menu dropdown-menu-end">
                             <!-- Khi chưa đăng nhập -->
                             <li class="not-logged-in"><a class="dropdown-item" href="#" onclick="showLogin(event)"><i
-                                        class="fas fa-sign-in-alt me-2"></i>Đăng nhập</a></li>
-                            <li class="not-logged-in"><a class="dropdown-item" href="#" onclick="showRegister(event)"><i
-                                        class="fas fa-user-plus me-2"></i>Đăng ký</a></li>
+                                class="fas fa-sign-in-alt me-2"></i>Đăng nhập</a></li>
 
                             <!-- Khi đã đăng nhập -->
                             <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
-                                        class="fas fa-user-circle me-2"></i>Tài khoản của tôi</a></li>
+                                class="fas fa-user-circle me-2"></i>Tài khoản của tôi</a></li>
                             <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
-                                        class="fas fa-box me-2"></i>Đơn hàng của tôi</a></li>
+                                class="fas fa-box me-2"></i>Đơn hàng của tôi</a></li>
                             <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
-                                        class="fas fa-heart me-2"></i>Yêu thích</a></li>
+                                class="fas fa-heart me-2"></i>Yêu thích</a></li>
                             <li class="logged-in d-none">
                                 <hr class="dropdown-divider">
                             </li>
                             <li class="logged-in d-none"><a class="dropdown-item text-danger" href="#"
-                                    onclick="logout(event)"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
+                                onclick="logout(event)"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
                         </ul>
                     </div>
                 </div>
@@ -160,27 +158,19 @@
             </div>
             <hr style="border-color: rgba(255,255,255,0.1); margin: 1.5rem 0;">
             <div class="text-center">
-                <p class="mb-0">&copy; 2024 TechStore. All rights reserved. Designed with <i
-                        class="fas fa-heart text-danger"></i></p>
+                <p class="mb-0">&copy; 2024 TechStore. All rights reserved. Designed with 
+                    <i class="fas fa-heart text-danger"></i>
+                </p>
             </div>
         </div>
     </footer>
-    <!-- Overlay chọn số lượng -->
-    <div id="addToCartModal" class="modal-overlay d-none">
-    <div class="modal-content">
-        <h5>Chọn số lượng</h5>
-        <input type="number" id="quantityInput" min="1" value="1" class="form-control my-2">
-        <div class="d-flex justify-content-end gap-2">
-        <button class="btn btn-secondary" onclick="closeAddToCart()">Hủy</button>
-        <button class="btn btn-primary" onclick="confirmAddToCart()">Thêm vào giỏ</button>
-        </div>
-    </div>
-    </div>
+    
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/trangchu.js"></script>
-    <!-- <script src="./js/popupGioHang.js"></script> -->
+    <script src="./js/main.js"></script>
+   
 </body>
 
 </html>
