--- a/frontend/Admin/admin.html
+++ b/frontend/Admin/admin.html
@@ -78,7 +78,7 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="/frontend/Admin/order.html" class="menu-link">
                     <i class="fas fa-shopping-cart menu-icon"></i>
                     <span class="menu-text">Đơn hàng</span>
                     <span class="menu-badge">12</span>
