--- a/frontend/trangchu.html
+++ b/frontend/trangchu.html
@@ -15,25 +15,15 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/frontend/trangchu.html">
                 <i class="fas fa-bolt"></i> TechStore
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Trang chủ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Khuyến mãi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Liên hệ</a>
-                    </li>
-                </ul>
-                <div class="d-flex align-items-center">
+
+                <div class="d-flex align-items-center ms-auto">
                     <!-- Giỏ hàng -->
                     <div class="position-relative me-3">
                         <a href="./tranggiohang.html" class="text-white position-relative" onclick="toggleCart(event)">
@@ -57,20 +47,18 @@
                         <ul class="dropdown-menu dropdown-menu-end">
                             <!-- Khi chưa đăng nhập -->
                             <li class="not-logged-in"><a class="dropdown-item" href="#" onclick="showLogin(event)"><i
-                                class="fas fa-sign-in-alt me-2"></i>Đăng nhập</a></li>
+                                        class="fas fa-sign-in-alt me-2"></i>Đăng nhập</a></li>
 
                             <!-- Khi đã đăng nhập -->
                             <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
-                                class="fas fa-user-circle me-2"></i>Tài khoản của tôi</a></li>
+                                        class="fas fa-user-circle me-2"></i>Tài khoản của tôi</a></li>
                             <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
-                                class="fas fa-box me-2"></i>Đơn hàng của tôi</a></li>
-                            <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
-                                class="fas fa-heart me-2"></i>Yêu thích</a></li>
+                                        class="fas fa-box me-2"></i>Đơn hàng của tôi</a></li>
                             <li class="logged-in d-none">
                                 <hr class="dropdown-divider">
                             </li>
                             <li class="logged-in d-none"><a class="dropdown-item text-danger" href="#"
-                                onclick="logout(event)"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
+                                    onclick="logout(event)"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
                         </ul>
                     </div>
                 </div>
@@ -97,9 +85,11 @@
             <div class="col-lg-10 col-md-9">
                 <!-- Banner -->
                 <div class="banner">
-                    <h2>Flash Sale Hôm Nay</h2>
-                    <p>Giảm giá đến 50% cho tất cả sản phẩm. Nhanh tay đặt hàng!</p>
-                    <div class="search-box" style="max-width: 400px;">
+                    <div class="banner-content">
+                        <h2>🔥 Flash Sale Hôm Nay</h2>
+                        <p>Giảm giá đến 50% cho tất cả sản phẩm. Nhanh tay đặt hàng!</p>
+                    </div>
+                    <div class="search-box">
                         <input type="text" class="form-control" placeholder="Tìm kiếm sản phẩm..." id="searchInput">
                     </div>
                 </div>
@@ -158,19 +148,17 @@
             </div>
             <hr style="border-color: rgba(255,255,255,0.1); margin: 1.5rem 0;">
             <div class="text-center">
-                <p class="mb-0">&copy; 2024 TechStore. All rights reserved. Designed with 
+                <p class="mb-0">&copy; 2024 TechStore. All rights reserved. Designed with
                     <i class="fas fa-heart text-danger"></i>
                 </p>
             </div>
         </div>
     </footer>
-    
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/trangchu.js"></script>
     <script src="./js/main.js"></script>
-   
+
 </body>
 
 </html>
