--- a/frontend/Admin/customermanagement.html
+++ b/frontend/Admin/customermanagement.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechStore - Quản Trị</title>
+    <title>TechStore - Quản Trị | Khách hàng</title>
+
+    <!-- Bootstrap + Icon + CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="/frontend/css/admin.css" />
@@ -36,23 +38,21 @@
                     <img id="admin-avatar" src="https://via.placeholder.com/40" alt="Admin" class="admin-avatar" />
                     <div class="admin-info">
                         <span id="admin-name" class="admin-name">Người dùng</span>
-                        <span id="admin-role" class="admin-role">Vai trò</span>
+                        <span id="admin-role" class="admin-role">Quản trị viên</span>
                     </div>
                     <i class="fas fa-chevron-down" id="profileDropdownToggle"
-                        style="color: #7f8c8d; font-size: 0.8rem; cursor:pointer;"></i>
+                       style="color:#7f8c8d;font-size:0.8rem;cursor:pointer;"></i>
 
-                    <!-- Dropdown menu -->
                     <div id="profileDropdown" class="dropdown-menu" style="
-              display:none;
-              position:absolute;
-              right:10px;
-              top:60px;
-              background:#fff;
-              border-radius:8px;
-              box-shadow:0 4px 8px rgba(0,0,0,0.1);
-              padding:10px;
-              z-index:1000;
-            ">
+                        display:none;
+                        position:absolute;
+                        right:10px;
+                        top:60px;
+                        background:#fff;
+                        border-radius:8px;
+                        box-shadow:0 4px 8px rgba(0,0,0,0.1);
+                        padding:10px;
+                        z-index:1000;">
                         <a href="#" id="logoutBtn" class="dropdown-item text-danger" style="text-decoration:none;">
                             <i class="fas fa-sign-out-alt"></i> Đăng xuất
                         </a>
@@ -66,7 +66,7 @@
     <aside class="sidebar" id="sidebar">
         <ul class="sidebar-menu">
             <li class="menu-item">
-                <a href="#" class="menu-link active">
+                <a href="/frontend/Admin/admin.html" class="menu-link">
                     <i class="fas fa-home menu-icon"></i>
                     <span class="menu-text">Tổng quan</span>
                 </a>
@@ -81,11 +81,11 @@
                 <a href="/frontend/Admin/order.html" class="menu-link">
                     <i class="fas fa-shopping-cart menu-icon"></i>
                     <span class="menu-text">Đơn hàng</span>
-                    <span class="menu-badge">12</span>
+                    <span class="menu-badge" id="orderCountBadge">0</span>
                 </a>
             </li>
             <li class="menu-item">
-                <a href="/frontend/Admin/customermanagement.html" class="menu-link">
+                <a href="/frontend/Admin/customermanagement.html" class="menu-link active">
                     <i class="fas fa-users menu-icon"></i>
                     <span class="menu-text">Khách hàng</span>
                 </a>
@@ -126,16 +126,78 @@
 
     <!-- Main Content -->
     <main class="main-content" id="mainContent">
-        <div class="welcome-section">
-            <h1 class="welcome-title">Xin chào, Quản trị viên! 👋</h1>
-            <p class="welcome-text">
-                Chào mừng bạn quay trở lại với bảng điều khiển TechStore
-            </p>
+        <div class="container-fluid">
+            <!-- Tiêu đề -->
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <div>
+                    <h1 class="h3 mb-1">Quản lý khách hàng</h1>
+                    <p class="text-muted mb-0">
+                        Xem danh sách, lịch sử và trạng thái khách hàng.
+                    </p>
+                </div>
+                <div class="d-flex gap-2">
+                    <button class="btn btn-outline-secondary btn-sm" onclick="loadCustomers()">
+                        <i class="fas fa-rotate-right"></i> Tải lại
+                    </button>
+                </div>
+            </div>
+
+            <!-- Bộ lọc & tìm kiếm -->
+            <div class="card mb-3">
+                <div class="card-body row g-3">
+                    <div class="col-md-4">
+                        <label class="form-label">Tìm kiếm</label>
+                        <input type="text" id="searchCustomerInput" class="form-control"
+                               placeholder="Tên, email, SĐT, mã KH..."
+                               oninput="renderCustomers()" />
+                    </div>
+                    <div class="col-md-3">
+                        <label class="form-label">Trạng thái</label>
+                        <select id="customerStatusFilter" class="form-select" onchange="renderCustomers()">
+                            <option value="">Tất cả</option>
+                            <option value="active">Đang hoạt động</option>
+                            <option value="blocked">Đã khóa</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Bảng khách hàng -->
+            <div class="card">
+                <div class="card-header d-flex justify-content_between align-items-center">
+                    <span><i class="fas fa-users"></i> Danh sách khách hàng</span>
+                    <span class="text-muted small" id="customerTotalText"></span>
+                </div>
+                <div class="card-body p-0">
+                    <div class="table-responsive">
+                        <table class="table table-hover align-middle mb-0">
+                            <thead class="table-light">
+                                <tr>
+                                    <th>#</th>
+                                    <th>Mã KH</th>
+                                    <th>Họ tên</th>
+                                    <th>Email</th>
+                                    <th>Số điện thoại</th>
+                                    <th>Số đơn</th>
+                                    <th>Tổng chi tiêu</th>
+                                    <th>Trạng thái</th>
+                                    <th>Thao tác</th>
+                                </tr>
+                            </thead>
+                            <tbody id="customerTableBody">
+                                <!-- JS render -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
+    <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/admin.js"></script>
+    <script src="../js/customers.js"></script>
 </body>
 
 </html>
