--- a/frontend/trangchu.html
+++ b/frontend/trangchu.html
@@ -57,20 +57,20 @@
                         <ul class="dropdown-menu dropdown-menu-end">
                             <!-- Khi chưa đăng nhập -->
                             <li class="not-logged-in"><a class="dropdown-item" href="#" onclick="showLogin(event)"><i
-                                class="fas fa-sign-in-alt me-2"></i>Đăng nhập</a></li>
+                                        class="fas fa-sign-in-alt me-2"></i>Đăng nhập</a></li>
 
                             <!-- Khi đã đăng nhập -->
                             <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
-                                class="fas fa-user-circle me-2"></i>Tài khoản của tôi</a></li>
+                                        class="fas fa-user-circle me-2"></i>Tài khoản của tôi</a></li>
                             <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
-                                class="fas fa-box me-2"></i>Đơn hàng của tôi</a></li>
+                                        class="fas fa-box me-2"></i>Đơn hàng của tôi</a></li>
                             <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
-                                class="fas fa-heart me-2"></i>Yêu thích</a></li>
+                                        class="fas fa-heart me-2"></i>Yêu thích</a></li>
                             <li class="logged-in d-none">
                                 <hr class="dropdown-divider">
                             </li>
                             <li class="logged-in d-none"><a class="dropdown-item text-danger" href="#"
-                                onclick="logout(event)"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
+                                    onclick="logout(event)"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
                         </ul>
                     </div>
                 </div>
@@ -158,19 +158,20 @@
             </div>
             <hr style="border-color: rgba(255,255,255,0.1); margin: 1.5rem 0;">
             <div class="text-center">
-                <p class="mb-0">&copy; 2024 TechStore. All rights reserved. Designed with 
+                <p class="mb-0">&copy; 2024 TechStore. All rights reserved. Designed with
                     <i class="fas fa-heart text-danger"></i>
                 </p>
             </div>
         </div>
     </footer>
-    
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/trangchu.js"></script>
     <script src="./js/main.js"></script>
-   
+
 </body>
 
 </html>
