--- a/frontend/chitiet.html
+++ b/frontend/chitiet.html
@@ -98,12 +98,15 @@
             <div class="col-lg-7">
                 <div class="bg-white p-4 rounded shadow-sm h-100">
                     <!-- Tên sản phẩm -->
-                    <h2 id="product-name" class="fw-bold mb-3"></h2>
-                    
-                    <!-- Rating -->
+                    <h2 id="product-name" class="fw-bold mb-3"></h2>                    <!-- Rating và Số lượng đã bán -->
                     <div class="d-flex align-items-center mb-3">
                         <div class="text-warning" id="product-rating"></div>
                         <span class="text-muted ms-2" id="product-reviews"></span>
+                        <span class="text-muted ms-3">|</span>
+                        <span class="text-muted ms-2">
+                            <i class="fas fa-shopping-bag me-1"></i>
+                            Đã bán: <span id="product-sold-count" class="fw-semibold text-success">0</span>
+                        </span>
                     </div>
 
                     <!-- Giá -->
