--- a/frontend/Admin/order.html
+++ b/frontend/Admin/order.html
@@ -34,32 +34,27 @@
                     <i class="fas fa-envelope"></i>
                     <span class="notification-badge">3</span>
                 </div>
-                <div class="admin-profile dropdown">
-                    <img id="admin-avatar" src="https://via.placeholder.com/40" alt="Admin" class="admin-avatar" />
+                <div id="profileDropdownToggle" class="admin-profile dropdown d-flex align-items-center dropdown-toggle"
+                    data-bs-toggle="dropdown" aria-expanded="false" style="cursor:pointer;">
+                    <img id="admin-avatar" src="/frontend/img/avt.jpg" alt="Admin" class="admin-avatar" />
                     <div class="admin-info">
                         <span id="admin-name" class="admin-name">Người dùng</span>
-                        <span id="admin-role" class="admin-role">Quản trị viên</span>
+                        <span id="admin-role" class="admin-role">Vai trò</span>
                     </div>
-                    <i class="fas fa-chevron-down" id="profileDropdownToggle"
-                        style="color: #7f8c8d; font-size: 0.8rem; cursor:pointer;"></i>
+                    <i class="fas fa-chevron-down ms-2" style="color: #7f8c8d; font-size: 0.8rem;"></i>
 
                     <!-- Dropdown menu -->
-                    <div id="profileDropdown" class="dropdown-menu" style="
-                            display:none;
-                            position:absolute;
-                            right:10px;
-                            top:60px;
-                            background:#fff;
-                            border-radius:8px;
-                            box-shadow:0 4px 8px rgba(0,0,0,0.1);
-                            padding:10px;
-                            z-index:1000;
-                        ">
-                        <a href="#" id="logoutBtn" class="dropdown-item text-danger" style="text-decoration:none;">
-                            <i class="fas fa-sign-out-alt"></i> Đăng xuất
-                        </a>
-                    </div>
+                    <ul id="profileDropdown" class="dropdown-menu dropdown-menu-end"
+                        aria-labelledby="profileDropdownToggle">
+                        <li>
+                            <a href="#" id="logoutBtn" class="dropdown-item text-danger">
+                                <i class="fas fa-sign-out-alt me-2"></i>Đăng xuất
+                            </a>
+                        </li>
+                    </ul>
                 </div>
+
+
             </div>
         </div>
     </header>
@@ -87,7 +82,7 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="/frontend/Admin/customermanagement.html" class="menu-link">
                     <i class="fas fa-users menu-icon"></i>
                     <span class="menu-text">Khách hàng</span>
                 </a>
