--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,7 +47,7 @@
                 <div class="overlay-panel overlay-left">
                     <h1>Chào mừng!</h1>
                     <p>Để giữ liên lạc với chúng tôi, vui lòng đăng nhập bằng thông tin cá nhân của bạn</p>
-                    <button class="ghost" id="signIn">Sign In</button>
+                    <button class="ghost" id="signIn">Đăng nhập</button>
                 </div>
                 <div class="overlay-panel overlay-right">
                     <h1>Xin chào!</h1>
