--- a/frontend/Admin/customermanagement.html
+++ b/frontend/Admin/customermanagement.html
@@ -193,6 +193,7 @@
 
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/admin.js"></script>
     <script src="../js/customers.js"></script>
 </body>
