--- a/frontend/Admin/productmanagement.html
+++ b/frontend/Admin/productmanagement.html
@@ -105,5 +105,6 @@
   </div>
 
  <script src="../js/productmanagement.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
