--- a/frontend/chitiet.html
+++ b/frontend/chitiet.html
@@ -40,7 +40,7 @@
                     <div class="dropdown">
                         <a href="#" class="text-white dropdown-toggle d-flex align-items-center"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img id="user-avatar" src="https://via.placeholder.com/30" alt="avatar"
+                            <img id="user-avatar" src="./img/avt.jpg" alt="avatar"
                                 class="rounded-circle me-2" style="width:30px;height:30px;object-fit:cover;">
                             <span id="user-name">Tài khoản</span>
                         </a>
@@ -182,9 +182,9 @@
                 <div class="bg-white p-4 rounded shadow-sm h-100">
                     <h4 class="fw-bold mb-3"><i class="fas fa-list-ul text-success me-2"></i>Thông số kỹ thuật</h4>
                     <div class="bg-light p-3 rounded">
-                        <ul id="product-specs" class="list-unstyled mb-0">
+                        <p id="product-specs" class="list-unstyled mb-0">
                             <!-- Specs sẽ được load từ JS -->
-                        </ul>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -216,6 +216,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/chitiet.js"></script>
     <script src="./js/main.js"></script>
 </body>
