--- a/frontend/thanhtoan.html
+++ b/frontend/thanhtoan.html
@@ -13,6 +13,7 @@
 
 <body class="bg-white">
 
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="/frontend/trangchu.html">
@@ -40,7 +41,7 @@
                     <div class="dropdown">
                         <a href="#" class="text-white dropdown-toggle d-flex align-items-center"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img id="user-avatar" src="https://via.placeholder.com/30" alt="avatar"
+                            <img id="user-avatar" src="./img/avt.jpg" alt="avatar"
                                 class="rounded-circle me-2" style="width:30px;height:30px;object-fit:cover;">
                             <span id="user-name">Tài khoản</span>
                         </a>
@@ -204,6 +205,7 @@
 
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/thanhtoan.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/pay.js"></script>
