--- a/frontend/tranggiohang.html
+++ b/frontend/tranggiohang.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="/frontend/trangchu.html">
@@ -39,7 +40,7 @@
                     <div class="dropdown">
                         <a href="#" class="text-white dropdown-toggle d-flex align-items-center"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img id="user-avatar" src="https://via.placeholder.com/30" alt="avatar"
+                            <img id="user-avatar" src="./img/avt.jpg" alt="avatar"
                                 class="rounded-circle me-2" style="width:30px;height:30px;object-fit:cover;">
                             <span id="user-name">Tài khoản</span>
                         </a>
@@ -132,6 +133,7 @@
     <span id="shipping" style="display: none;">Miễn phí</span>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/giohang.js"></script>
     <script src="./js/main.js"></script>
 </body>
