--- a/frontend/Admin/chat-admin.html
+++ b/frontend/Admin/chat-admin.html
@@ -30,21 +30,49 @@
     <!-- SIDEBAR -->
     <aside class="sidebar" id="sidebar">
         <ul class="sidebar-menu">
-            <li class="menu-item"><a href="/frontend/Admin/admin.html" class="menu-link"><i
-                        class="fas fa-home menu-icon"></i><span class="menu-text">Tổng quan</span></a></li>
+                            <a href="#" class="menu-link active">
+                    <i class="fas fa-home menu-icon"></i>
+                    <span class="menu-text">Tổng quan</span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="/frontend/Admin/productmanagement.html" class="menu-link">
+                    <i class="fas fa-box menu-icon"></i>
+                    <span class="menu-text">Quản lý sản phẩm</span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="/frontend/Admin/order.html" class="menu-link">
+                    <i class="fas fa-shopping-cart menu-icon"></i>
+                    <span class="menu-text">Đơn hàng</span>
+                    <span class="menu-badge">12</span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="/frontend/Admin/customermanagement.html" class="menu-link">
+                    <i class="fas fa-users menu-icon"></i>
+                    <span class="menu-text">Khách hàng</span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="/frontend/Admin/statistics.html" class="menu-link">
+                    <i class="fas fa-chart-line menu-icon"></i>
+                    <span class="menu-text">Thống kê</span>
+                </a>
+            </li>
 
-            <li class="menu-item"><a href="/frontend/Admin/productmanagement.html" class="menu-link"><i
-                        class="fas fa-box menu-icon"></i><span class="menu-text">Quản lý sản phẩm</span></a></li>
-
-            <li class="menu-item"><a href="/frontend/Admin/order.html" class="menu-link"><i
-                        class="fas fa-shopping-cart menu-icon"></i><span class="menu-text">Đơn hàng</span></a></li>
-
-            <li class="menu-item"><a href="/frontend/Admin/customermanagement.html" class="menu-link"><i
-                        class="fas fa-users menu-icon"></i><span class="menu-text">Khách hàng</span></a></li>
-
-            <li class="menu-item"><a href="/frontend/Admin/statistics.html" class="menu-link"><i
-                        class="fas fa-chart-line menu-icon"></i><span class="menu-text">Thống kê</span></a></li>
-
+            <li class="menu-item">
+                <a href="#" class="menu-link">
+                    <i class="fas fa-percent menu-icon"></i>
+                    <span class="menu-text">Khuyến mãi</span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="#" class="menu-link">
+                    <i class="fas fa-star menu-icon"></i>
+                    <span class="menu-text">Đánh giá</span>
+                </a>
+            </li>
             <li class="menu-item">
                 <a class="menu-link active" href="/frontend/Admin/chat-admin.html">
                     <i class="fas fa-comment-dots menu-icon"></i>
