--- a/frontend/Admin/customermanagement.html
+++ b/frontend/Admin/customermanagement.html
@@ -106,7 +106,7 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="/frontend/Admin/chat-admin.html" class="menu-link">
                     <i class="fas fa-comment menu-icon"></i>
                     <span class="menu-text">Tin nhắn</span>
                     <span class="menu-badge">8</span>
