--- a/frontend/Admin/productmanagement.html
+++ b/frontend/Admin/productmanagement.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8">
   <title>Quản lý sản phẩm - TechStore Admin</title>
@@ -10,101 +11,111 @@
 
 
 <body>
-<body>
-  <div class="container-fluid py-4">
-    <div class="row">
-      <!-- Sidebar danh mục -->
-      <div class="col-md-3 col-lg-2">        <div class="sidebar">
-          <h5><i class="fas fa-bars"></i> Danh Mục</h5>
-          <!-- Categories sẽ được load từ JS -->
+
+  <body>
+    <div class="container-fluid py-4">
+      <div class="row">
+        <!-- Sidebar danh mục -->
+        <div class="col-md-3 col-lg-2">
+          <div class="sidebar">
+            <h5><i class="fas fa-bars"></i> Danh Mục</h5>
+            <!-- Categories sẽ được load từ JS -->
+          </div>
         </div>
-      </div>
 
-      <!-- Nội dung chính -->
-      <div class="col-md-9 col-lg-10">
-        <h2 class="mb-4 text-center">Quản lý sản phẩm</h2>
+        <!-- Nội dung chính -->
+        <div class="col-md-9 col-lg-10">
+          <h2 class="mb-4 text-center">Quản lý sản phẩm</h2>
 
-        <!-- Form thêm sản phẩm -->
-        <form id="addProductForm" class="mb-5 bg-white p-4 rounded shadow-sm">
-          <input type="hidden" id="productId" name="id">
-          <div class="row g-3">
-            <div class="col-md-4">
-              <label class="form-label">Tên sản phẩm</label>
-              <input type="text" id="name" name="name" class="form-control" required>
-            </div>
+          <!-- Form thêm sản phẩm -->
+          <form id="addProductForm" class="mb-5 bg-white p-4 rounded shadow-sm">
+            <input type="hidden" id="productId" name="id">
+            <div class="row g-3">
+              <div class="col-md-4">
+                <label class="form-label">Tên sản phẩm</label>
+                <input type="text" id="name" name="name" class="form-control" required>
+              </div>
 
-            <div class="col-md-4">
-              <label class="form-label">Giá</label>
-              <input type="number" id="price" name="price" class="form-control" required>
-            </div>              <div class="col-md-4">
-                <label class="form-label">Danh mục</label>              <select id="category" name="category_id" class="form-select" required>
+              <div class="col-md-4">
+                <label class="form-label">Giá</label>
+                <input type="number" id="price" name="price" class="form-control" required>
+              </div>
+              <div class="col-md-4">
+                <label class="form-label">Danh mục</label> <select id="category" name="category_id" class="form-select"
+                  required>
                   <option value="">-- Chọn danh mục --</option>
                   <!-- Categories sẽ được load từ JS -->
                 </select>
-            </div>
-
-            <div class="col-md-4">
-              <label class="form-label">Ảnh</label>
-              <div class="custom-file-upload">
-                <input type="file" id="image" name="image" accept="image/*">
-                <label class="file-upload-label" for="image">
-                  <i class="fas fa-cloud-upload-alt"></i>
-                  <span class="file-text">Chọn ảnh sản phẩm</span>
-                </label>
               </div>
-              <div class="file-name" id="fileName">
-                <i class="fas fa-check-circle"></i>
-                <span></span>
+
+              <div class="col-md-4">
+                <label class="form-label">Ảnh</label>
+                <div class="custom-file-upload">
+                  <input type="file" id="image" name="image" accept="image/*">
+                  <label class="file-upload-label" for="image">
+                    <i class="fas fa-cloud-upload-alt"></i>
+                    <span class="file-text">Chọn ảnh sản phẩm</span>
+                  </label>
+                </div>
+                <div class="file-name" id="fileName">
+                  <i class="fas fa-check-circle"></i>
+                  <span></span>
+                </div>
+              </div>
+
+              <div class="col-md-8">
+                <label class="form-label">Mô tả</label>
+                <textarea id="description" name="description" class="form-control" rows="2"></textarea>
+              </div>
+              <div class="col-md-8">
+                <label class="form-label">Thông số kỹ thuật</label>
+                <textarea id="specs" name="specs" class="form-control" rows="2"></textarea>
+              </div>
+
+              <div class="col-12 text-end">
+                <button type="submit" id="submitBtn" class="btn btn-primary px-4">
+                  <i class="fas fa-plus-circle"></i>
+                  <span>Thêm sản phẩm</span>
+                </button>
               </div>
             </div>
+          </form>
 
-            <div class="col-md-8">
-              <label class="form-label">Mô tả</label>
-              <textarea id="description" name="description" class="form-control" rows="2"></textarea>
+          <!-- Danh sách sản phẩm -->
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <table class="table table-bordered table-striped align-middle" id="productTable">
+                <thead class="table-dark">
+                  <tr>
+                    <th>#</th>
+                    <th>Tên sản phẩm</th>
+                    <th>Danh mục</th>
+                    <th>Giá</th>
+                    <th>Ảnh</th>
+                    <th>Mô tả</th>
+                    <th>Thông số</th>
+                    <th>Trạng thái</th>
+                    <th>Hành động</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- Dữ liệu sẽ được JS render -->
+                </tbody>
+              </table>
             </div>
-
-            <div class="col-12 text-end">
-              <button type="submit" id="submitBtn" class="btn btn-primary px-4">
-                <i class="fas fa-plus-circle"></i>
-                <span>Thêm sản phẩm</span>
-              </button>
+            <div class="card-footer bg-white text-center">
+              <a href="../Admin/admin.html" class="btn-home">
+                <i class="fas fa-home"></i>
+                <span>Quay lại trang chủ</span>
+              </a>
             </div>
-          </div>
-        </form>
-
-        <!-- Danh sách sản phẩm -->
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <table class="table table-bordered table-striped align-middle" id="productTable">
-              <thead class="table-dark">
-                <tr>
-                  <th>#</th>
-                  <th>Tên sản phẩm</th>
-                  <th>Danh mục</th>
-                  <th>Giá</th>
-                  <th>Ảnh</th>
-                  <th>Mô tả</th>
-                  <th>Trạng thái</th>
-                  <th>Hành động</th>
-                </tr>
-              </thead>
-              <tbody>
-                <!-- Dữ liệu sẽ được JS render -->
-              </tbody>
-            </table>
-          </div>
-          <div class="card-footer bg-white text-center">
-            <a href="../Admin/admin.html" class="btn-home">
-              <i class="fas fa-home"></i>
-              <span>Quay lại trang chủ</span>
-            </a>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
- <script src="../js/productmanagement.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-</body>
+    <script src="../js/productmanagement.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  </body>
+
 </html>
