--- a/frontend/Admin/order.html
+++ b/frontend/Admin/order.html
@@ -155,6 +155,7 @@
                             <option value="processing">Đang giao</option>
                             <option value="completed">Hoàn thành</option>
                             <option value="cancelled">Đã hủy</option>
+                              <option value="cancelled">Đã hủy / Đã hoàn tiền</option>
                         </select>
                     </div>
                 </div>
