--- a/frontend/thanhtoan.html
+++ b/frontend/thanhtoan.html
@@ -53,7 +53,7 @@
                             <!-- Khi đã đăng nhập -->
                             <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
                                         class="fas fa-user-circle me-2"></i>Tài khoản của tôi</a></li>
-                            <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
+                            <li class="logged-in d-none"><a class="dropdown-item" href="/frontend/donhangcuatoi.html"><i
                                         class="fas fa-box me-2"></i>Đơn hàng của tôi</a></li>
                             <li class="logged-in d-none">
                                 <hr class="dropdown-divider">
